docs: update req agent docs (#870)

--- a/docs-mintlify/experimental/requirement-agent.mdx
+++ b/docs-mintlify/experimental/requirement-agent.mdx
@@ -8,97 +8,100 @@ This is an **experimental** feature and will evolve based on community feedback.
 </Note>
 
 
-The `RequirementAgent` combines the power of LLMs, tools, and requirements, all wrapped in a declarative interface.
+The `RequirementAgent` is a declarative AI agent that combines language models, tools, and execution requirements to create predictable, controlled behavior across different LLMs.
+
+## Why Use Requirement Agent?
+
+Building agents that work reliably across multiple LLMs is difficult. Most agents are tightly tuned to specific models, with rigid prompts that cause models to misinterpret instructions, skip tools, or hallucinate facts.
+
+`RequirementAgent` provides a declarative framework for designing agents that strikes a balance between flexibility and control. It allows for agent behavior that is both predictable and adaptable, without the complexity and limitations of more rigid systems.
+
+## Core Concepts
+
+**Everything is a Tool**
+- Data retrieval, web search, reasoning, and final answers are all implemented as tools
+- This structure ensures valid responses with structured outputs and eliminates parsing errors
+
+**Requirements Control Tool Usage**
+You can define rules that control when and how tools are used:
+- "Only use tool A after tool B has been called"
+- "Tool D must be used exactly twice, but not two times in a row"
+- "Tool E can only be used after both tool A and tool B have been used"
+- "Tool F must be called immediately after tool D"
+- "You must call tool C at least once before giving a final answer"
+
+## Quickstart
+
+This example demonstrates how to create an agent with enforced tool execution order:
 
 ```py
 from beeai_framework.agents.experimental import RequirementAgent
+from beeai_framework.agents.experimental.requirements.conditional import ConditionalRequirement
 
+# Create an agent that plans activities based on weather and events
 agent = RequirementAgent(
-  llm=ChatModel.from_name("ollama:granite3.3:8b"),
-  tools=[
-	ThinkTool(),
-	OpenMeteoTool(),
-	DuckDuckGoSearchTool()
-  ],
-  instructions="Plan activities for a given destination based on current weather and events.",
-  requirements=[
-    ConditionalRequirement(ThinkTool, force_at_step=1),
-    ConditionalRequirement(DuckDuckGoSearchTool, only_after=[OpenMeteoTool], min_invocations=1),
-  ],
+    llm=ChatModel.from_name("ollama:granite3.3:8b"),
+    tools=[
+        ThinkTool(),             # For reasoning
+        OpenMeteoTool(),         # For weather data
+        DuckDuckGoSearchTool()   # For event search
+    ],
+    instructions="Plan activities for a given destination based on current weather and events.",
+    requirements=[
+        # Force thinking first
+        ConditionalRequirement(ThinkTool, force_at_step=1),
+        # Search only after getting weather, at least once
+        ConditionalRequirement(DuckDuckGoSearchTool, only_after=[OpenMeteoTool], min_invocations=1),
+    ],
 )
-```
 
-Congratulations! You now have an agent that will plan your evening. The agent first thinks, and then either produces an answer or calls the OpenMeteoTool, followed by DuckDuckGo.
-Let's execute the agent while logging all intermediate steps.
-
-```py
-response = await agent.run("What to do in Boston?")
-  .middleware(GlobalTrajectoryMiddleware())
-
+# Run with execution logging
+response = await agent.run("What to do in Boston?").middleware(GlobalTrajectoryMiddleware())
 print(response.result.text)
 ```
 
+This agent will:
+1. First use `ThinkTool` to reason about the request
+2. Check weather using `OpenMeteoTool`
+3. Search for events using `DuckDuckGoSearchTool` (at least once)
+4. Provide recommendations based on the gathered information
+
 ➡️ Check out more [examples](https://github.com/i-am-bee/beeai-framework/tree/main/python/examples/agents/experimental/requirement) (multi-agent, custom requirements, ...).
 
-## 💬 Motivation
+## Requirements and Rules
 
-Every language model is different and expects a unique style of communication. This makes it complicated to create a single system prompt (agent) that works well for all models. Nudging the model within existing implementations can be tricky, as system prompts are often highly opinionated and typically optimized for a single model or a small subset. Additionally, an agent’s system prompt may force the LLM to produce text in a predefined structure, which models may not be able to follow. The model might get confused by the large context window or simply be incapable of adhering to the structure.
+**Requirements** are functions that evaluate the current agent state and produce a list of rules. The system evaluates requirements before each LLM call to determine which tools are available.
 
-As a result, you never know whether the response is hallucinated or backed by evidence from a tool. For smaller models, you need to be more explicit, while for more capable models, you can be more flexible. This is why people have started switching to workflows (graphs), which are typically more restrictive but come with additional development costs.
+**Rules** define specific constraints on tool usage. Each rule contains the following attributes:
 
-We have addressed these issues in our new agent-building abstraction.
+| Attribute      | Description                                           |
+|:---------------|:------------------------------------------------------|
+| `target`       | The tool the rule applies to                          |
+| `allowed`      | Whether the tool can be used                          |
+| `hidden`       | Whether the tool’s definition is visible to the agent |
+| `prevent_stop` | Whether the rule blocks termination                   |
+| `forced`       | Whether the tool must be invoked                      |
 
-
-## 🔎 Core principles
-
-**Everything is a tool**
-- From data retrieval and web search to reasoning or even providing a final answer.
-- This allows us to generate outputs that adhere to a user-defined format (leveraging structured decoding).
-- The model always produces a valid response—no more parsing errors.
-
-**Tool execution is influenced by a set of requirements**
-- Use tool `A` only after tool `B` was called.
-- Tool `D` must be run exactly twice, but never in a row.
-- Tool `E` can only be run after both `A` and `B` have been executed.
-- Tool `F` must be called immediately after tool `D`.
-- You can't provide a final answer before calling tool `C` at least once.
-
-## 📋 What are Requirements?
-
-**Requirements** are functions that take the current agent state and produce a list of **rules**.
-
-**Rules** are objects that define restrictions to the agent based on its current state:
-
-- The tool the rule applies to (`target` attribute)
-- Whether the tool can be used (`allowed` attribute)
-- Whether the tool’s definition is visible to the agent (`hidden` attribute)
-- Whether the rule blocks termination (`prevent_stop` attribute)
-- Whether the tool must be invoked (`forced` attribute)
+When requirements generate conflicting rules, the system applies this precedence:
+- **Forbidden takes precedence:** If any rule forbids a tool, it cannot be used
+- **Highest priority forced rule wins:** Among forced rules, the highest priority requirement determines the forced tool
+- **Multiple prevention rules combine:** All `prevent_stop` rules are respected
 
 <Warning>
-If two different rules force a tool execution, the one with a higher priority is applied.
+Requirements are evaluated on every iteration before calling the LLM. Design them to be efficient for frequent execution.
 </Warning>
-
-<Warning>
-Forbidding a tool’s usage takes precedence over allowing it.
-</Warning>
-
-<Note>
-Requirements are invoked on every iteration's start (before calling an LLM).
-</Note>
 
 <Tip>
 Start with a single requirement and add more as needed.
 </Tip>
 
-### Conditional
+## Conditional Requirement
 
-A requirement that enables the use of a given tool (or set of tools) after certain conditions are met.
-See the following examples.
+The conditional requirement controls when tools can be used based on specific conditions.
 
-**Define order of execution**
+### Force Execution Order
 
-In the following example, we force the agent to use `ThinkTool` (for reasoning) followed by `DuckDuckGoSearchTool` to retrieve data. This trajectory ensures that even a small model can arrive at the correct answer. Without such enforcement, the agent might skip tool calls entirely.
+This example forces the agent to use `ThinkTool` for reasoning followed by `DuckDuckGoSearchTool` to retrieve data. This trajectory ensures that even a small model can arrive at the correct answer by preventing it from skipping tool calls entirely.
 
 ```py
 RequirementAgent(
@@ -111,7 +114,7 @@ RequirementAgent(
 )
 ```
 
-**Creating a ReAct agent**
+### Creating a ReAct Agent
 
 A ReAct Agent (Reason and Act) follows this trajectory:
 
@@ -119,7 +122,7 @@ A ReAct Agent (Reason and Act) follows this trajectory:
 Think -> Use a tool -> Think -> Use a tool -> Think -> ... -> End
 ```
 
-This can be easily achieved by forcing the execution of the `Think` tool after every other tool.
+You can achieve this by forcing the execution of the `Think` tool after every other tool:
 
 ```py
 RequirementAgent(
@@ -130,12 +133,12 @@ RequirementAgent(
 ```
 
 <Tip>
-To generalize further, use `ConditionalRequirement(ThinkTool, force_at_step=1, force_after=Tool, can_be_used_in_row=False)`, where the option `can_be_used_in_row=False` simply denotes that `ThinkTool` cannot be used multiple times in a row.
+For a more general approach, use `ConditionalRequirement(ThinkTool, force_at_step=1, force_after=Tool, can_be_used_in_row=False)`, where the option `can_be_used_in_row=False` prevents `ThinkTool` from being used multiple times in a row.
 </Tip>
 
-**Creating a ReAct agent with custom conditions**
+### ReAct Agent + Custom Conditions
 
-You may want an agent that works like ReAct but skips the 'reasoning' (thinking) step under certain conditions. In the example below, the `priority` option is used to tell the agent to send an email by calling the `send_email` tool after `create_order` is invoked, and call `ThinkTool` after every other action.
+You may want an agent that works like ReAct but skips the "reasoning" step under certain conditions. This example uses the priority option to tell the agent to send an email after creating an order, while calling `ThinkTool` after every other action.
 
 ```py
 RequirementAgent(
@@ -148,7 +151,7 @@ RequirementAgent(
 )
 ```
 
-**Prevent agent termination if a tool hasn't been called yet**
+### Prevent Early Termination
 
 The following requirement prevents the agent from providing a final answer before it calls the `my_tool`.
 
@@ -156,7 +159,7 @@ The following requirement prevents the agent from providing a final answer befor
 ConditionalRequirement(my_tool, min_invocations=1)
 ```
 
-**List of possible arguments**
+### Complete Parameter Reference
 
 ```py
 ConditionalRequirement(
@@ -181,16 +184,16 @@ ConditionalRequirement(
 ```
 
 <Tip>
-It is recommended to pass a class instance (e.g., `weather_tool = ...`) or a class (`OpenMeteoTool`) rather than a tool's name, as some tools may have dynamically generated names.
+Pass a class instance (e.g., `weather_tool = ...`) or a class (`OpenMeteoTool`) rather than a tool's name. Some tools may have dynamically generated names.
 </Tip>
 
 <Note>
-If the reasoner detects two contradictory rules or a rule without an existing target, it throws an error.
+The reasoner throws an error if it detects contradictory rules or a rule without an existing target.
 </Note>
 
-### AskPermission
+## Ask Permission Requirement
 
-Some tools may be expensive to run or have destructive effects. For these, you may want to get approval from an external system or directly from the user.
+Some tools may be expensive to run or have destructive effects. For these tools, you may want to get approval from an external system or directly from the user.
 
 ```py
 RequirementAgent(
@@ -200,7 +203,7 @@ RequirementAgent(
 )
 ```
 
-**Using a custom source**
+### Using a Custom Handler
 
 ```py
 async def handler(tool: Tool, input: dict[str, Any]) -> bool:
@@ -210,7 +213,7 @@ async def handler(tool: Tool, input: dict[str, Any]) -> bool:
 AskPermissionRequirement(..., handler=handler)
 ```
 
-**All possible parameters**
+### Complete Parameter Reference
 
 ```py
 AskPermissionRequirement(
@@ -227,7 +230,7 @@ AskPermissionRequirement(
 If no targets are specified, permission is required for all tools.
 </Note>
 
-#### Writing Your Own Requirement
+## Custom Requirement
 
 You can create a custom requirement by implementing the base Requirement class.
 The Requirement class has the following lifecycle:
@@ -243,10 +246,9 @@ The Requirement class has the following lifecycle:
 - This method is called multiple times, typically before an LLM call.
 - The return type of the `run` method is a list of rules.
 
+### Premature Stop Requirement
 
-**PrematureStopRequirement Example**
-
-The following example demonstrates how to write a requirement that prevents the agent from answering if the question contains a specific phrase.
+This example demonstrates how to write a requirement that prevents the agent from answering if the question contains a specific phrase:
 
 {/* <!-- embedme python/examples/agents/experimental/requirement/custom_requirement.py --> */}
 
