feat(agents): allow RequirementAgent to be exposed via ACP,BeeAIPlatform and A2A
Ref: #846
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/docs-mintlify/integrations/a2a.mdx
+++ b/docs-mintlify/integrations/a2a.mdx
@@ -75,7 +75,7 @@ A2AServer lets you expose agents built in the BeeAI framework via A2A protocol.
 	{/* <!-- embedme python/examples/serve/a2a_server.py --> */}
 	```py Python
 	from beeai_framework.adapters.a2a import A2AServer, A2AServerConfig
-	from beeai_framework.agents.tool_calling.agent import ToolCallingAgent
+	from beeai_framework.agents.experimental import RequirementAgent
 	from beeai_framework.backend import ChatModel
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
@@ -84,7 +84,7 @@ A2AServer lets you expose agents built in the BeeAI framework via A2A protocol.
 	
 	def main() -> None:
 	    llm = ChatModel.from_name("ollama:granite3.3:8b")
-	    agent = ToolCallingAgent(
+	    agent = RequirementAgent(
 	        llm=llm,
 	        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
 	        memory=UnconstrainedMemory(),
