--- a/docs-mintlify/integrations/acp.mdx
+++ b/docs-mintlify/integrations/acp.mdx
@@ -130,8 +130,7 @@ Basic example:
 {/* <!-- embedme python/examples/serve/acp.py --> */}
 ```py
 from beeai_framework.adapters.acp import ACPServer, ACPServerConfig
-from beeai_framework.agents.tool_calling.agent import ToolCallingAgent
-from beeai_framework.agents.types import AgentMeta
+from beeai_framework.agents.experimental import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.memory import UnconstrainedMemory
 from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
@@ -140,12 +139,13 @@ from beeai_framework.tools.weather import OpenMeteoTool
 
 def main() -> None:
     llm = ChatModel.from_name("ollama:granite3.3:8b")
-    agent = ToolCallingAgent(
+    agent = RequirementAgent(
         llm=llm,
         tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
         memory=UnconstrainedMemory(),
         # specify the agent's name and other metadata
-        meta=AgentMeta(name="my_agent", description="A simple agent", tools=[]),
+        name="my_agent",
+        description="A simple agent",
     )
 
     # Register the agent with the ACP server and run the HTTP server
@@ -172,12 +172,13 @@ import acp_sdk.server.context as acp_context
 import acp_sdk.server.types as acp_types
 from pydantic import BaseModel, InstanceOf
 
-from beeai_framework.adapters.acp import ACPServer, acp_msg_to_framework_msg
+from beeai_framework.adapters.acp import ACPServer
+from beeai_framework.adapters.acp.serve._utils import acp_msgs_to_framework_msgs
 from beeai_framework.adapters.acp.serve.agent import ACPServerAgent
 from beeai_framework.adapters.acp.serve.server import to_acp_agent_metadata
 from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServerMetadata
 from beeai_framework.agents.base import BaseAgent
-from beeai_framework.backend.message import AnyMessage, AssistantMessage, Role
+from beeai_framework.backend.message import AnyMessage, AssistantMessage
 from beeai_framework.context import Run, RunContext
 from beeai_framework.emitter.emitter import Emitter
 from beeai_framework.errors import FrameworkError
@@ -226,10 +227,7 @@ def main() -> None:
         async def run(
             input: list[acp_models.Message], context: acp_context.Context
         ) -> AsyncGenerator[acp_types.RunYield, acp_types.RunYieldResume]:
-            framework_messages = [
-                acp_msg_to_framework_msg(Role(message.parts[0].role), str(message))  # type: ignore[attr-defined]
-                for message in input
-            ]
+            framework_messages = acp_msgs_to_framework_msgs(input)
             response = await agent.run(framework_messages)
             yield acp_models.MessagePart(content=response.message.text, role="assistant")  # type: ignore[call-arg]
 
