--- a/docs/modules/emitter.mdx
+++ b/docs/modules/emitter.mdx
@@ -28,8 +28,9 @@ import asyncio
 import json
 import sys
 import traceback
+from typing import Any
 
-from beeai_framework.emitter import Emitter
+from beeai_framework.emitter import Emitter, EventMeta
 from beeai_framework.errors import FrameworkError
 
 
@@ -37,9 +38,14 @@ async def main() -> None:
     # Get the root emitter or create your own
     root = Emitter.root()
 
-    cleanup = root.match(
-        "*.*", lambda data, event: print(f"Received event '{event.path}' with data {json.dumps(data)}")
-    )
+    # Define a listener that prints an incoming event
+    # handler can be async or sync function
+    async def on_new_event(data: Any, event: EventMeta) -> None:
+        print(f"Received event '{event.name}' ({event.path}) with data {json.dumps(data)}")
+
+    # Setup a listener for all events on the root emitter
+    # *.* -> match all events including those emitted in sub-emitters
+    cleanup = root.match("*.*", on_new_event)
 
     await root.emit("start", {"id": 123})
     await root.emit("end", {"id": 123})
@@ -274,7 +280,11 @@ await second.emit("d", {});
 
 ## Framework usage
 
-Typically, you consume out-of-the-box modules that use the `Emitter` concept on your behalf.
+In the following section we will take a look how to consume events from core modules in the the framework.
+
+<Tip>
+The fastest way to see what is going on under the hood is by doing `instance.run(...).middleware(GlobalTrajectoryMiddleware)`.
+</Tip>
 
 ### Agent usage
 
