--- a/docs/modules/events.mdx
+++ b/docs/modules/events.mdx
@@ -37,6 +37,8 @@ The following events can be observed calling `ReActAgent.run`.
 | `tool_success`                | `ReActAgentToolEvent`    | Triggered when a tool operation completes successfully.    |
 | `tool_error`                  | `ReActAgentToolEvent`    | Triggered when a tool operation fails.                     |
 
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/agents/react/events.py) the in-code definition.
+
 
 ### ChatModel events
 
@@ -50,6 +52,8 @@ The following events can be observed when calling `ChatModel.create` or `ChatMod
 | `error`      | `ChatModelErrorEvent`    | Triggered when model generation encounters an error.                       |
 | `finish`     | `None`                   | Triggered when model generation finishes (regardless of success or error). |
 
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/backend/events.py) the in-code definition.
+
 ### Tool events
 
 The following events can be observed when calling `Tool.run`.
@@ -62,6 +66,9 @@ The following events can be observed when calling `Tool.run`.
 | `retry`   | `ToolRetryEvent`   | Triggered when a tool operation is being retried.                        |
 | `finish`  | `None`             | Triggered when tool execution finishes (regardless of success or error). |
 
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/tools/events.py) the in-code definition.
+
+
 ### Workflow events
 
 The following events can be observed when calling `Workflow.run`.
@@ -71,6 +78,8 @@ The following events can be observed when calling `Workflow.run`.
 | `start`   | `WorkflowStartEvent`   | Triggered when a workflow step begins execution.       |
 | `success` | `WorkflowSuccessEvent` | Triggered when a workflow step completes successfully. |
 | `error`   | `WorkflowErrorEvent`   | Triggered when a workflow step encounters an error.    |
+
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/workflows/events.py) the in-code definition.
 
 ### ToolCallingAgent events
 
@@ -82,13 +91,24 @@ The following events can be observed calling `ToolCallingAgent.run`.
 | `start`   | `ToolCallingAgentStartEvent`   | Triggered when the agent begins execution.                 |
 | `success` | `ToolCallingAgentSuccessEvent` | Triggered when the agent successfully completes execution. |
 
-## Internal events
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/agents/tool_calling/events.py) the in-code definition.
 
-These events are primarily used for internal framework operations and debugging. They are not typically meant for end-users.
 
-### RunContext events
+### RequirementAgent events
 
-The following events are for internal debugging of run contexts.
+
+| Event     | Data Type                      | Description                                                |
+| :-------- | :----------------------------- | :--------------------------------------------------------- |
+| `start`   | `RequirementAgentStartEvent`   | Triggered when the agent begins execution.                 |
+| `success` | `RequirementAgentSuccessEvent` | Triggered when the agent successfully completes execution. |
+
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/agents/experimental/events.py) the in-code definition.
+
+
+## RunContext events (internal)
+
+Special events that are emitted before the target's handler gets executed.
+A run event contains `.run.` in its event's path and has `internal` set to true in event's context object.
 
 | Event     | Data Type             | Description                      |
 | :-------- | :-------------------- | :------------------------------- |
@@ -96,6 +116,8 @@ The following events are for internal debugging of run contexts.
 | `success` | `<Run return object>` | Triggered when the run succeeds. |
 | `error`   | `FrameworkError`      | Triggered when an error occurs.  |
 | `finish`  | `None`                | Triggered when the run finishes. |
+
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/context.py#L260-L273) the in-code definition.
 
 ### LinePrefixParser events
 
@@ -105,3 +127,5 @@ The following events are caught internally by the line prefix parser.
 | :--------------- | :----------------------- | :-------------------------------------- |
 | `update`         | `LinePrefixParserUpdate` | Triggered when an update occurs.        |
 | `partial_update` | `LinePrefixParserUpdate` | Triggered when a partial update occurs. |
+
+[Check out the in-code definition](https://github.com/i-am-bee/beeai-framework/blob/main/python/beeai_framework/parsers/line_prefix.py) the in-code definition.
