docs(agents): add new examples for RequirementAgent
Signed-off-by: Tomas Dvorak <toomas2d@gmail.com>

--- a/docs/experimental/requirement-agent.mdx
+++ b/docs/experimental/requirement-agent.mdx
@@ -10,6 +10,11 @@ This is an **experimental** feature and will evolve based on community feedback.
 
 The `RequirementAgent` is a declarative AI agent that combines language models, tools, and execution requirements to create predictable, controlled behavior across different LLMs.
 
+<Tip>
+	Curious to see it in the action?
+	Explore our [interactive exercises](https://github.com/i-am-bee/beeai-framework/tree/main/python/examples/agents/experimental/requirement/exercises) to discover how the agent solves real problems step by step!
+</Tip>
+
 ## Why Use Requirement Agent?
 
 Building agents that work reliably across multiple LLMs is difficult. Most agents are tightly tuned to specific models, with rigid prompts that cause models to misinterpret instructions, skip tools, or hallucinate facts.
@@ -18,11 +23,11 @@ Building agents that work reliably across multiple LLMs is difficult. Most agent
 
 ## Core Concepts
 
-**Everything is a Tool**
+**💡 Everything is a Tool**
 - Data retrieval, web search, reasoning, and final answers are all implemented as tools
 - This structure ensures valid responses with structured outputs and eliminates parsing errors
 
-**Requirements Control Tool Usage**
+**💡 Requirements Control Tool Usage**
 > You can define rules that control when and how tools are used.
 
 - "Only use tool A after tool B has been called"
