--- a/docs/modules/agents.mdx
+++ b/docs/modules/agents.mdx
@@ -513,12 +513,18 @@ class CustomAgentRunOutput(BaseModel):
 
 
 class CustomAgent(BaseAgent[CustomAgentRunOutput]):
-    memory: BaseMemory | None = None
-
     def __init__(self, llm: ChatModel, memory: BaseMemory) -> None:
         super().__init__()
         self.model = llm
-        self.memory = memory
+        self._memory = memory
+
+    @property
+    def memory(self) -> BaseMemory:
+        return self._memory
+
+    @memory.setter
+    def memory(self, memory: BaseMemory) -> None:
+        self._memory = memory
 
     def _create_emitter(self) -> Emitter:
         return Emitter.root().child(
@@ -586,6 +592,7 @@ if __name__ == "__main__":
     except FrameworkError as e:
         traceback.print_exc()
         sys.exit(e.explain())
+
 ```
 
 {/* <!-- embedme typescript/examples/agents/custom_agent.ts --> */}
