--- a/docs/python/modules/backend.mdx
+++ b/docs/python/modules/backend.mdx
@@ -450,6 +450,7 @@ async def main() -> None:
         )
 
         tool_calls = response.get_tool_calls()
+        messages.extend(response.messages)
 
         tool_results: list[ToolMessage] = []
 
@@ -459,7 +460,7 @@ async def main() -> None:
             assert tool is not None
             res: ToolOutput = await tool.run(json.loads(tool_call.args))
             result = res.get_text_content()
-            print(f"<- got response from '{tool_call.tool_name}'", re.sub(r"\s+", " ", result)[:90] + " (truncated)")
+            print(f"<- got response from '{tool_call.tool_name}'", re.sub(r"\s+", " ", result)[:256] + " (truncated)")
             tool_results.append(
                 ToolMessage(
                     MessageToolResultContent(
