--- a/docs/guides/mcp-slackbot.mdx
+++ b/docs/guides/mcp-slackbot.mdx
@@ -71,7 +71,7 @@ import traceback
 from typing import Any
 
 from dotenv import load_dotenv
-from mcp import ClientSession, StdioServerParameters
+from mcp import StdioServerParameters
 from mcp.client.stdio import stdio_client
 
 from beeai_framework.agents import AgentExecutionConfig
@@ -80,7 +80,7 @@ from beeai_framework.backend import ChatModel, ChatModelParameters
 from beeai_framework.emitter import EventMeta
 from beeai_framework.errors import FrameworkError
 from beeai_framework.memory import UnconstrainedMemory
-from beeai_framework.tools.mcp import MCPTool
+from beeai_framework.tools.mcp import MCPClient, MCPTool
 from beeai_framework.tools.weather import OpenMeteoTool
 
 # Load environment variables
@@ -98,15 +98,15 @@ server_params = StdioServerParameters(
 )
 
 
-async def slack_tool(session: ClientSession) -> MCPTool:
+async def slack_tool(client: MCPClient) -> MCPTool:
     # Discover Slack tools via MCP client
-    slacktools = await MCPTool.from_client(session)
+    slacktools = await MCPTool.from_client(client)
     filter_tool = filter(lambda tool: tool.name == "slack_post_message", slacktools)
     slack = list(filter_tool)
     return slack[0]
 
 
-async def create_agent(session: ClientSession) -> ToolCallingAgent:
+async def create_agent() -> ToolCallingAgent:
     """Create and configure the agent with tools and LLM"""
 
     # Other models to try:
@@ -119,7 +119,7 @@ async def create_agent(session: ClientSession) -> ToolCallingAgent:
     )
 
     # Configure tools
-    slack = await slack_tool(session)
+    slack = await slack_tool(stdio_client(server_params))
     weather = OpenMeteoTool()
 
     # Create agent with memory and tools and custom system prompt template
@@ -147,19 +147,16 @@ def print_events(data: Any, event: EventMeta) -> None:
 async def main() -> None:
     """Main application loop"""
 
-    async with stdio_client(server_params) as (read, write), ClientSession(read, write) as session:
-        await session.initialize()
+    # Create agent
+    agent = await create_agent()
 
-        # Create agent
-        agent = await create_agent(session)
+    # Run agent with the prompt
+    response = await agent.run(
+        prompt="Post the current temperature in Prague to the '#bee-playground-xxx' Slack channel.",
+        execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
+    ).on("*", print_events)
 
-        # Run agent with the prompt
-        response = await agent.run(
-            prompt="Post the current temperature in Prague to the '#bee-playground-xxx' Slack channel.",
-            execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
-        ).on("*", print_events)
-
-        print("Agent 🤖 : ", response.result.text)
+    print("Agent 🤖 : ", response.result.text)
 
 
 if __name__ == "__main__":
